// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table align column 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
              style="text-align:center"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
            <td
              class=""
              style="text-align:center"
            />
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
            <td
              class=""
              style="text-align:center"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table custom components renders correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
        name="my-table"
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
          name="my-header-wrapper"
        >
          <tr
            name="my-header-row"
          >
            <th
              class=""
              name="my-header-cell"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
          name="my-body-wrapper"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
            name="my-body-row"
          >
            <td
              class=""
              name="my-body-cell"
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
            name="my-body-row"
          >
            <td
              class=""
              name="my-body-cell"
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table custom components renders fixed column and footer correctly 1`] = `
<div
  class="rc-table rc-table-fixed-header rc-table-fixed-footer rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-body"
        style="max-height:100px;overflow-y:scroll"
      >
        <table
          class=""
          name="my-table"
        >
          <colgroup>
            <col />
            <col />
            <col />
          </colgroup>
          <tbody
            class="rc-table-tbody"
            name="my-body-wrapper"
          >
            <tr
              class="rc-table-row  rc-table-row-level-0"
              name="my-body-row"
            >
              <td
                class=""
                name="my-body-cell"
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Lucy
              </td>
              <td
                class=""
                name="my-body-cell"
              >
                27
              </td>
              <td
                class=""
                name="my-body-cell"
              >
                F
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="rc-table-footer"
      >
        <table
          class=""
        >
          <colgroup>
            <col />
            <col />
            <col />
          </colgroup>
          <tfoot
            class="rc-table-tfoot"
          >
            <tr>
              <th
                class=""
              >
                Name
              </th>
              <th
                class=""
              >
                Age
              </th>
              <th
                class=""
              >
                Gender
              </th>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
    <div
      class="rc-table-fixed-left"
    >
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
          style="max-height:100px;overflow-y:scroll"
        >
          <table
            class="rc-table-fixed"
            name="my-table"
          >
            <colgroup>
              <col />
            </colgroup>
            <tbody
              class="rc-table-tbody"
              name="my-body-wrapper"
            >
              <tr
                class="rc-table-row  rc-table-row-level-0"
                name="my-body-row"
              >
                <td
                  class=""
                  name="my-body-cell"
                >
                  <span
                    class="rc-table-row-indent indent-level-0"
                    style="padding-left:0px"
                  />
                  Lucy
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="rc-table-footer"
      >
        <table
          class="rc-table-fixed"
        >
          <colgroup>
            <col />
          </colgroup>
          <tfoot
            class="rc-table-tfoot"
          >
            <tr>
              <th
                class=""
              >
                Name
              </th>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
    <div
      class="rc-table-fixed-right"
    >
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
          style="max-height:100px;overflow-y:scroll"
        >
          <table
            class="rc-table-fixed"
            name="my-table"
          >
            <colgroup>
              <col />
            </colgroup>
            <tbody
              class="rc-table-tbody"
              name="my-body-wrapper"
            >
              <tr
                class="rc-table-row  rc-table-row-level-0"
                name="my-body-row"
              >
                <td
                  class=""
                  name="my-body-cell"
                >
                  F
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="rc-table-footer"
      >
        <table
          class="rc-table-fixed"
        >
          <colgroup>
            <col />
          </colgroup>
          <tfoot
            class="rc-table-tfoot"
          >
            <tr>
              <th
                class=""
              >
                Gender
              </th>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table custom components renders fixed column and header correctly 1`] = `
<div
  class="rc-table rc-table-fixed-header rc-table-fixed-footer rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-header"
      >
        <table
          class=""
        >
          <colgroup>
            <col />
            <col />
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
            name="my-header-wrapper"
          >
            <tr
              name="my-header-row"
            >
              <th
                class=""
                name="my-header-cell"
              >
                Name
              </th>
              <th
                class=""
                name="my-header-cell"
              >
                Age
              </th>
              <th
                class=""
                name="my-header-cell"
              >
                Gender
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div
        class="rc-table-body"
        style="max-height:100px;overflow-y:scroll"
      >
        <table
          class=""
          name="my-table"
        >
          <colgroup>
            <col />
            <col />
            <col />
          </colgroup>
          <tbody
            class="rc-table-tbody"
            name="my-body-wrapper"
          >
            <tr
              class="rc-table-row  rc-table-row-level-0"
              name="my-body-row"
            >
              <td
                class=""
                name="my-body-cell"
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Lucy
              </td>
              <td
                class=""
                name="my-body-cell"
              >
                27
              </td>
              <td
                class=""
                name="my-body-cell"
              >
                F
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="rc-table-fixed-left"
    >
      <div
        class="rc-table-header"
      >
        <table
          class="rc-table-fixed"
        >
          <colgroup>
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
            name="my-header-wrapper"
          >
            <tr
              name="my-header-row"
            >
              <th
                class=""
                name="my-header-cell"
              >
                Name
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
          style="max-height:100px;overflow-y:scroll"
        >
          <table
            class="rc-table-fixed"
            name="my-table"
          >
            <colgroup>
              <col />
            </colgroup>
            <tbody
              class="rc-table-tbody"
              name="my-body-wrapper"
            >
              <tr
                class="rc-table-row  rc-table-row-level-0"
                name="my-body-row"
              >
                <td
                  class=""
                  name="my-body-cell"
                >
                  <span
                    class="rc-table-row-indent indent-level-0"
                    style="padding-left:0px"
                  />
                  Lucy
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="rc-table-fixed-right"
    >
      <div
        class="rc-table-header"
      >
        <table
          class="rc-table-fixed"
        >
          <colgroup>
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
            name="my-header-wrapper"
          >
            <tr
              name="my-header-row"
            >
              <th
                class=""
                name="my-header-cell"
              >
                Gender
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
          style="max-height:100px;overflow-y:scroll"
        >
          <table
            class="rc-table-fixed"
            name="my-table"
          >
            <colgroup>
              <col />
            </colgroup>
            <tbody
              class="rc-table-tbody"
              name="my-body-wrapper"
            >
              <tr
                class="rc-table-row  rc-table-row-level-0"
                name="my-body-row"
              >
                <td
                  class=""
                  name="my-body-cell"
                >
                  F
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table dataIndex render text by path 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              First Name
            </th>
            <th
              class=""
            >
              Last Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              John
            </td>
            <td
              class=""
            >
              Doe
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Terry
            </td>
            <td
              class=""
            >
              Garner
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders colSpan correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
              colspan="2"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
              colspan="2"
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              John
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Terry
            </td>
            <td
              class=""
            >
              Garner
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders column correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col
            style="width:100px;min-width:100px"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="name-class"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class="name-class"
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class="name-class"
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders column.onCell correctly 1`] = `
Array [
  <td
    class=""
    id="cell-Lucy"
  >
    <span
      class="rc-table-row-indent indent-level-0"
      style="padding-left:0px"
    />
    Lucy
  </td>,
  <td
    class=""
    id="cell-Jack"
  >
    <span
      class="rc-table-row-indent indent-level-0"
      style="padding-left:0px"
    />
    Jack
  </td>,
]
`;

exports[`Table renders column.onHeaderCell 1`] = `
<th
  class=""
  id="header-cell-name"
>
  Name
</th>
`;

exports[`Table renders correctly 1`] = `
<div
  class="test-prefix test-class-name test-prefix-scroll-position-left"
>
  <div
    class="test-prefix-content"
  >
    <div
      class="test-prefix-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="test-prefix-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="test-prefix-tbody"
        >
          <tr
            class="test-prefix-row  test-prefix-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="test-prefix-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="test-prefix-row  test-prefix-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="test-prefix-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders correctly RowClassName as function 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row test-row-class-name-asFn rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row test-row-class-name-asFn rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders correctly RowClassName as string 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row test-row-class-name-asStr rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row test-row-class-name-asStr rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders custom cell correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <p>
                Lucy
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <p>
                Jack
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders empty text correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        />
      </table>
    </div>
    <div
      class="rc-table-placeholder"
    >
      No data
    </div>
  </div>
</div>
`;

exports[`Table renders empty text correctly 2`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        />
      </table>
    </div>
    <div
      class="rc-table-placeholder"
    >
      No data
    </div>
  </div>
</div>
`;

exports[`Table renders fixed footer correctly 1`] = `
<div
  class="rc-table rc-table-fixed-footer rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="rc-table-footer"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <tfoot
          class="rc-table-tfoot"
        >
          <tr>
            <th
              class=""
            />
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders fixed header correctly 1`] = `
<div
  class="rc-table rc-table-fixed-header rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-header"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders onHeaderRow correctly 1`] = `
<tr
  id="header-row-0"
>
  <th
    class=""
  >
    Name
  </th>
</tr>
`;

exports[`Table renders onRow correctly 1`] = `
Array [
  <tr
    class="rc-table-row  rc-table-row-level-0"
    id="row-key0"
    index="0"
  >
    <td
      class=""
    >
      <span
        class="rc-table-row-indent indent-level-0"
        style="padding-left:0px"
      />
      Lucy
    </td>
  </tr>,
  <tr
    class="rc-table-row  rc-table-row-level-0"
    id="row-key1"
    index="1"
  >
    <td
      class=""
    >
      <span
        class="rc-table-row-indent indent-level-0"
        style="padding-left:0px"
      />
      Jack
    </td>
  </tr>,
]
`;

exports[`Table renders rowSpan correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              First Name
            </th>
            <th
              class=""
            >
              Last Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              John
            </td>
            <td
              class=""
              rowspan="2"
            >
              Doe
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Terry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders table body to the wrapper 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="custom-wapper"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table renders without header 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
        </colgroup>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table scroll renders scroll.x is a number 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-body"
        style="overflow-x:scroll;-webkit-transform:translate3d (0, 0, 0)"
      >
        <table
          class="rc-table-fixed"
          style="width:200px"
        >
          <colgroup>
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class=""
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Lucy
              </td>
            </tr>
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table scroll renders scroll.x is true 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-body"
        style="overflow-x:scroll;-webkit-transform:translate3d (0, 0, 0)"
      >
        <table
          class="rc-table-fixed"
          style="table-layout:fixed"
        >
          <colgroup>
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class=""
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Lucy
              </td>
            </tr>
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table scroll renders scroll.y is a number 1`] = `
<div
  class="rc-table rc-table-fixed-header rc-table-fixed-footer rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-header"
      >
        <table
          class=""
        >
          <colgroup>
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class=""
              >
                Name
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div
        class="rc-table-body"
        style="max-height:200px;overflow-y:scroll"
      >
        <table
          class=""
        >
          <colgroup>
            <col />
          </colgroup>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Lucy
              </td>
            </tr>
            <tr
              class="rc-table-row  rc-table-row-level-0"
            >
              <td
                class=""
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
